@@ -1,3 +1,9 @@
+2008-10-27  Thomas Hinkle  <tom@grenville>
+
+	* src/lib/backends/db.py (RecData.backup_db): Automatically make a
+	copy of the database when we're about to do a DB update, just in
+	case something ugly happens.
+
 2008-10-27  Thomas Hinkle  <thomas_hinkle@users.sourceforge.net>
 
 	* src/lib/plugin_loader.py: Add debug calls to make it easy to see
